fix: drop overflow-x hidden on *
* Breaks position: sticky for upcoming ToC.

* The reason mobile UI broke was me forgetting to add overflow-x to code blocks

--- a/src/app.css
+++ b/src/app.css
@@ -41,9 +41,6 @@ ul,
 ol {
 	list-style-position: inside;
 }
-* {
-	overflow-x: hidden;
-}
 a {
 	color: ivory;
 }
